syntax = "proto3";

option go_package = "golang/auth;auth";
package Auth;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string password2 = 4;
}

message JWTRequest {
    string token = 1;
}

message UserResponse {
    bool success = 1;
    string error = 2;
    string token = 3;
    string expiration = 4;
    int32 userId = 5;
}

message DefaultResponse {
    bool success = 1;
    string error = 2;
    string token = 3;
}

service Authentication {
    rpc Login(LoginRequest) returns (DefaultResponse) {}
    rpc Register(RegisterRequest) returns (DefaultResponse) {}
    rpc CheckJWT(JWTRequest) returns (UserResponse) {}
}
